**pnp-0.6.21 ??/??/2013**
  * Feature: Helper functions rrd::alerter and rrd:alerter_gr both supports treshold detection (Martin Schirrmacher)
  * Update:  jQuery Mobile update to 1.3.0 

**pnp-0.6.20 03/03/2013**
  * Feature: Support check_mk Multisite Cookie Auth ( Lars Michelsen )
  * Feature: Allow RRD unknown values ( Simon Meggle )
  * feature: Interactive delete mode added to check_rrds.pl ( Simon Meggle ) 
  * Bugfix:  Allow multiple gearman servers ( Craig Barraclough )
  * Bugfix:  Fixed Graph Search ( Stefan Triep )
  * Update:  jQuery update to 1.8.1 
  * Update:  jQueryUI update to 1.8.23

**pnp-0.6.19 09/01/2012**
  * Feature: Parameter "width" added to popup controller ( Andreas Doehler ) 
  * Fix:     simplify/improve apache rules ( Christoph Anton Mitterer )
  * Fix:     Check for missing PHP GD functions 
  * Bugfix:  socketDOMAIN changed to AF_INET while using livstatus tcp socket ( Rene Koch )

**pnp-0.6.18 06/28/2012**
  * Bugfix:  Fixed STORAGE_TYPE and CUSTOM_TEMPLATE vars used in custom templates
  * Bugfix:  Blank screen on PHP 5.4 fixed
  * Feature: Allow multiple gearman job servers
  * Feature: New helper function rrd::debug()
  * Feature: New templates check_jmx4perl_*.php

**pnp-0.6.17 03/25/2012**
  * Bugfix:  Fixed rrd_convert.pl while running with --dry-run
  * Bugfix:  logging.c include missing header files ( Lars Vogdt )       
  * Bugfix:  Check if pnp4nagios/etc/rra.cfg is readable
  * Bugfix:  rrd_convert.pl use XML tag TEMPLATE instead of CHECKCOMMAND to selects RRDs ( Sven Velt )
  * Feature: npcdmod.o increase perfdata buffer and log discarded perfdata ( Birger Schmidt )
  * Feature: rrd_modify.pl to change number of data sources of an RRD file
  * Feature: New template check_apachestatus_auto.php
  * Feature: Implement etc/config.d to place config snippets ( Lars Michelsen )

**pnp-0.6.16 11/21/2011**
  * Bugfix:  Fixed single quoted check_multi labels (Reported by Matthias Flacke)