@@ -418,7 +418,7 @@ Changes can be tracked on <a href="http://pnp4nagios.git.sourceforge.net/git/git
 </p>
 
 <p>
-The current Version is <a href="https://sourceforge.net/projects/pnp4nagios/files/latest" class="urlextern" title="https://sourceforge.net/projects/pnp4nagios/files/latest"  rel="nofollow"> pnp4nagios-0.6.19.tar.gz</a>
+The current Version is <a href="https://sourceforge.net/projects/pnp4nagios/files/latest" class="urlextern" title="https://sourceforge.net/projects/pnp4nagios/files/latest"  rel="nofollow"> pnp4nagios-0.6.20.tar.gz</a>
 </p>
 
 </div>
@@ -438,7 +438,7 @@ This is allways the latest GIT HEAD Version
 
 <p>
 
-Last Update: Sun Mar  3 11:05:01 CET 2013
+Last Update: Sat Mar 23 19:05:01 CET 2013
 </p>
 
 </div>
@@ -448,7 +448,16 @@ Last Update: Sun Mar  3 11:05:01 CET 2013
 
 <p>
 
-<strong>pnp-0.6.20 ??/??/2012</strong>
+<strong>pnp-0.6.21 ??/??/2013</strong>
+</p>
+<ul>
+<li class="level1"><div class="li"> Feature: Helper functions rrd::alerter and rrd:alerter_gr both supports treshold detection (Martin Schirrmacher)</div>
+</li>
+</ul>
+
+<p>
+
+<strong>pnp-0.6.20 03/03/2013</strong>
 </p>
 <ul>
 <li class="level1"><div class="li"> Feature: Support check_mk Multisite Cookie Auth ( Lars Michelsen )</div>
@@ -458,6 +467,12 @@ Last Update: Sun Mar  3 11:05:01 CET 2013
 <li class="level1"><div class="li"> feature: Interactive delete mode added to check_rrds.pl ( Simon Meggle ) </div>
 </li>
 <li class="level1"><div class="li"> Bugfix:  Allow multiple gearman servers ( Craig Barraclough )</div>
+</li>
+<li class="level1"><div class="li"> Bugfix:  Fixed Graph Search ( Stefan Triep )</div>
+</li>
+<li class="level1"><div class="li"> Update:  jQuery update to 1.8.1 </div>
+</li>
+<li class="level1"><div class="li"> Update:  jQueryUI update to 1.8.23</div>
 </li>
 </ul>
 
