@@ -15,7 +15,7 @@ Changes can be tracked on <a href="http://pnp4nagios.git.sourceforge.net/git/git
 </p>
 
 <p>
-The current Version is <a href="https://sourceforge.net/projects/pnp4nagios/files/latest" class="urlextern" title="https://sourceforge.net/projects/pnp4nagios/files/latest"  rel="nofollow"> pnp4nagios-0.6.19.tar.gz</a>
+The current Version is <a href="https://sourceforge.net/projects/pnp4nagios/files/latest" class="urlextern" title="https://sourceforge.net/projects/pnp4nagios/files/latest"  rel="nofollow"> pnp4nagios-0.6.20.tar.gz</a>
 </p>
 
 </div>
@@ -35,7 +35,7 @@ This is allways the latest GIT HEAD Version
 
 <p>
 
-Last Update: Sun Mar  3 13:07:11 CET 2013
+Last Update: Sun Mar 24 17:05:02 CET 2013
 </p>
 
 </div>
@@ -47,8 +47,13 @@ Last Update: Sun Mar  3 13:07:11 CET 2013
 
 <strong>pnp-0.6.21 ??/??/2013</strong>
 </p>
+<ul>
+<li class="level1"><div class="li"> Feature: Helper functions rrd::alerter and rrd:alerter_gr both supports treshold detection (Martin Schirrmacher)</div>
+</li>
+</ul>
 
 <p>
+
 <strong>pnp-0.6.20 03/03/2013</strong>
 </p>
 <ul>
