@@ -1,6 +1,8 @@
-**pnp-0.6.21 ??/??/2013**
+**pnp-0.6.?? ??/??/2013**
+
+**pnp-0.6.21 03/24/2013**
   * Feature: Helper functions rrd::alerter and rrd:alerter_gr both supports treshold detection (Martin Schirrmacher)
-  * Update:  jQuery Mobile update to 1.3.0 
+  * Update:  jQuery Mobile update to 1.3.0 ( was broken in 0.6.20 ) 
 
 **pnp-0.6.20 03/03/2013**
   * Feature: Support check_mk Multisite Cookie Auth ( Lars Michelsen )
